--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "del": "^3.0.0",
@@ -52,6 +51,7 @@
     "jest": "^20.0.4",
     "js-beautify": "^1.6.14",
     "lint-staged": "^4.0.0",
+    "mkdirp": "^0.5.1",
     "pify": "^3.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
@@ -76,5 +76,11 @@
   },
   "engines": {
     "node": ">=4"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
