--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "pascal-case": "^2.0.1",
     "prettier": "^1.4.4",
     "prismjs": "^1.6.0",
+    "string-indent": "^0.1.1",
     "stringify-object": "^3.2.0",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babylon": "^6.17.4",
     "del": "^3.0.0",
     "eslint": "^4.0.0",
     "eslint-plugin-node": "^5.0.0",
