--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   },
   "homepage": "https://github.com/mapbox/md-react-transformer#readme",
   "dependencies": {
+    "babel-code-frame": "^6.22.0",
     "balanced-match": "^1.0.0",
+    "block-elements": "^1.2.0",
     "gray-matter": "^2.1.1",
     "highlight.js": "^9.12.0",
     "htmltojsx": "^0.2.6",
+    "line-column": "^1.0.2",
     "lodash": "^4.17.4",
     "markdown-it": "^8.3.1",
     "pascal-case": "^2.0.1",
