--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "babel-code-frame": "^6.22.0",
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
-    "gray-matter": "^2.1.1",
+    "front-matter": "^2.1.2",
     "highlight.js": "^9.12.0",
     "htmltojsx": "^0.2.6",
     "line-column": "^1.0.2",
