--- a/package.json
+++ b/package.json
@@ -41,9 +41,17 @@
     "pascal-case": "^2.0.1",
     "prettier": "^1.4.4",
     "prismjs": "^1.6.0",
+    "react-element-to-jsx-string": "^10.1.0",
+    "rehype-raw": "^2.0.0",
+    "rehype-stringify": "^3.0.0",
+    "remark-html": "^6.0.1",
+    "remark-parse": "^3.0.1",
+    "remark-react": "^4.0.0",
+    "remark-rehype": "^2.0.1",
     "string-indent": "^0.1.1",
     "stringify-object": "^3.2.0",
-    "strip-indent": "^2.0.0"
+    "strip-indent": "^2.0.0",
+    "unified": "^6.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
