--- a/package.json
+++ b/package.json
@@ -33,25 +33,24 @@
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
     "front-matter": "^2.1.2",
-    "highlight.js": "^9.12.0",
+    "hast-util-from-parse5": "^2.0.1",
+    "hast-util-to-string": "^1.0.0",
     "htmltojsx": "^0.2.6",
     "line-column": "^1.0.2",
     "lodash": "^4.17.4",
-    "markdown-it": "^8.3.1",
+    "parse5": "^3.0.2",
     "pascal-case": "^2.0.1",
     "prettier": "^1.4.4",
     "prismjs": "^1.6.0",
-    "react-element-to-jsx-string": "^10.1.0",
+    "rehype-parse": "^4.0.0",
     "rehype-raw": "^2.0.0",
     "rehype-stringify": "^3.0.0",
-    "remark-html": "^6.0.1",
     "remark-parse": "^3.0.1",
-    "remark-react": "^4.0.0",
     "remark-rehype": "^2.0.1",
-    "string-indent": "^0.1.1",
     "stringify-object": "^3.2.0",
     "strip-indent": "^2.0.0",
-    "unified": "^6.1.5"
+    "unified": "^6.1.5",
+    "unist-util-visit": "^1.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
