--- a/package.json
+++ b/package.json
@@ -29,29 +29,22 @@
   },
   "homepage": "https://github.com/mapbox/md-react-transformer#readme",
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.1.0",
     "babel-code-frame": "^6.22.0",
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
     "front-matter": "^2.1.2",
-    "hast-util-from-parse5": "^2.0.1",
-    "hast-util-to-string": "^1.0.0",
     "htmltojsx": "^0.2.6",
     "line-column": "^1.0.2",
     "lodash": "^4.17.4",
-    "parse5": "^3.0.2",
     "pascal-case": "^2.0.1",
     "prettier": "^1.4.4",
-    "prismjs": "^1.6.0",
-    "rehype-parse": "^4.0.0",
     "rehype-raw": "^2.0.0",
     "rehype-stringify": "^3.0.0",
     "remark-parse": "^3.0.1",
     "remark-rehype": "^2.0.1",
     "stringify-object": "^3.2.0",
     "strip-indent": "^2.0.0",
-    "unified": "^6.1.5",
-    "unist-util-visit": "^1.1.3"
+    "unified": "^6.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
