--- a/package.json
+++ b/package.json
@@ -33,17 +33,18 @@
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
     "front-matter": "^2.1.2",
-    "highlight.js": "^9.12.0",
     "htmltojsx": "^0.2.6",
     "line-column": "^1.0.2",
     "lodash": "^4.17.4",
-    "markdown-it": "^8.3.1",
     "pascal-case": "^2.0.1",
     "prettier": "^1.4.4",
-    "prismjs": "^1.6.0",
-    "string-indent": "^0.1.1",
+    "rehype-raw": "^2.0.0",
+    "rehype-stringify": "^3.0.0",
+    "remark-parse": "^3.0.1",
+    "remark-rehype": "^2.0.1",
     "stringify-object": "^3.2.0",
-    "strip-indent": "^2.0.0"
+    "strip-indent": "^2.0.0",
+    "unified": "^6.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
