Clean config and deps

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "precommit": "lint-staged",
     "lint": "eslint *.js test lib",
-    "format": "prettier --single-quote --write '{,lib/,test/}*.js'",
+    "format": "prettier --single-quote --write '{,lib/**/,test/**/}*.js'",
     "test-jest": "jest",
     "pretest": "npm run lint",
     "test": "jest"
@@ -54,7 +54,7 @@
     "del": "^3.0.0",
     "eslint": "^4.0.0",
     "eslint-plugin-node": "^5.0.0",
-    "husky": "^0.13.4",
+    "husky": "^0.14.1",
     "jest": "^20.0.4",
     "js-beautify": "^1.6.14",
     "lint-staged": "^4.0.0",
@@ -64,7 +64,8 @@
     "react-dom": "^15.6.1"
   },
   "lint-staged": {
-    "{,lib/,test/}*.js": [
+    "{,lib/**/,test/**/}*.js": [
+      "eslint",
       "prettier --single-quote --write",
       "git add"
     ]
