--- a/package.json
+++ b/package.json
@@ -1,66 +1,38 @@
 {
-  "name": "@mapbox/jsxtreme-markdown",
-  "version": "0.7.1",
-  "description": "Transform Markdown into JSX or React component modules",
-  "main": "index.js",
+  "private": true,
+  "name": "jsxtreme-markdown",
+  "license": "MIT",
   "scripts": {
     "precommit": "lint-staged",
     "lint": "eslint .",
     "format": "prettier --single-quote --write '{,lib/**/,test/**/}*.js'",
-    "test-jest": "jest",
     "pretest": "npm run lint",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mapbox/jsxtreme-markdown.git"
-  },
-  "keywords": [
-    "markdown",
-    "jsx",
-    "react",
-    "transform",
-    "markdown-to-react"
-  ],
-  "author": "Mapbox",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mapbox/jsxtreme-markdown/issues"
-  },
-  "homepage": "https://github.com/mapbox/jsxtreme-markdown#readme",
-  "dependencies": {
-    "babel-core": "^6.25.0",
+  "devDependencies": {
+    "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-code-frame": "^6.22.0",
-    "balanced-match": "^1.0.0",
-    "block-elements": "^1.2.0",
-    "front-matter": "^2.1.2",
-    "htmltojsx": "^0.2.6",
-    "line-column": "^1.0.2",
-    "lodash": "^4.17.4",
-    "pascal-case": "^2.0.1",
-    "prettier": "^1.4.4",
-    "rehype-raw": "^2.0.0",
-    "rehype-stringify": "^3.0.0",
-    "remark-parse": "^4.0.0",
-    "remark-rehype": "^2.0.1",
-    "stringify-object": "^3.2.0",
-    "strip-indent": "^2.0.0",
-    "unified": "^6.1.5"
-  },
-  "devDependencies": {
     "del": "^3.0.0",
-    "eslint": "^4.0.0",
-    "eslint-plugin-node": "^5.0.0",
-    "husky": "^0.14.1",
+    "eslint": "^4.3.0",
+    "eslint-plugin-node": "^5.1.1",
+    "husky": "^0.14.3",
     "jest": "^20.0.4",
     "js-beautify": "^1.6.14",
-    "lint-staged": "^4.0.0",
+    "lint-staged": "^4.0.2",
     "mkdirp": "^0.5.1",
     "pify": "^3.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "prettier": "^1.5.3"
+  },
+  "engines": {
+    "node": ">=4"
+  },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
+    "clearMocks": true
   },
   "lint-staged": {
     "**/*.js": [
@@ -68,19 +40,6 @@
       "prettier --single-quote --write",
       "git add"
     ]
-  },
-  "jest": {
-    "coverageReporters": [
-      "text",
-      "html"
-    ],
-    "clearMocks": true,
-    "roots": [
-      "./test"
-    ]
-  },
-  "engines": {
-    "node": ">=4"
   },
   "babel": {
     "presets": [
