--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "name": "jsxtreme-markdown",
   "license": "MIT",
   "scripts": {
-    "precommit": "lint-staged",
     "lint": "eslint .",
+    "test-jest": "jest",
     "format": "prettier --single-quote --write '{,lib/**/,test/**/}*.js'",
+    "postinstall": "lerna bootstrap",
+    "precommit": "lint-staged",
     "pretest": "npm run lint",
     "test": "jest"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "del": "^3.0.0",
     "eslint": "^4.3.0",
     "eslint-plugin-node": "^5.1.1",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
-    "js-beautify": "^1.6.14",
+    "lerna": "^2.0.0",
     "lint-staged": "^4.0.2",
-    "mkdirp": "^0.5.1",
-    "pify": "^3.0.0",
     "prettier": "^1.5.3"
   },
   "engines": {
@@ -31,6 +27,12 @@
     "coverageReporters": [
       "text",
       "html"
+    ],
+    "roots": [
+      "<rootDir>/packages"
+    ],
+    "testMatch": [
+      "**/*.test.js"
     ],
     "clearMocks": true
   },
