--- a/packages/babel-plugin-transform-jsxtreme-markdown/package.json
+++ b/packages/babel-plugin-transform-jsxtreme-markdown/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/mapbox/jsxtreme-markdown/issues"
   },
-  "homepage": "https://github.com/mapbox/jsxtreme-markdown#readme",
+  "homepage": "https://github.com/mapbox/jsxtreme-markdown/packages/babel-plugin-transform-jsxtreme-markdown#readme",
   "keywords": [
     "babel",
     "babel-plugin",
@@ -24,6 +24,10 @@
   "dependencies": {
     "@mapbox/jsxtreme-markdown": "^0.7.1",
     "babylon": "^6.17.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1"
   },
   "engines": {
     "node": ">=4"
