--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/mapbox/jsxtreme-markdown/issues"
   },
-  "homepage": "https://github.com/mapbox/jsxtreme-markdown#readme",
+  "homepage": "https://github.com/mapbox/jsxtreme-markdown/packages/jsxtreme-markdown#readme",
   "keywords": [
     "markdown",
     "jsx",
@@ -32,16 +32,23 @@
     "line-column": "^1.0.2",
     "lodash": "^4.17.4",
     "pascal-case": "^2.0.1",
-    "prettier": "^1.4.4",
     "rehype-raw": "^2.0.0",
     "rehype-stringify": "^3.0.0",
     "remark-parse": "^4.0.0",
     "remark-rehype": "^2.0.1",
     "stringify-object": "^3.2.0",
-    "strip-indent": "^2.0.0",
     "unified": "^6.1.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "del": "^3.0.0",
+    "js-beautify": "^1.6.14",
+    "mkdirp": "^0.5.1",
+    "pify": "^3.0.0",
+    "prettier": "^1.5.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "strip-indent": "^2.0.0"
+  },
   "engines": {
     "node": ">=4"
   }
