--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint .",
     "test-jest": "jest",
-    "format": "prettier --single-quote --write '{,lib/**/,test/**/}*.js'",
+    "format": "prettier --single-quote --write '**/!(node_modules|dist)/**/*.js'",
     "postinstall": "lerna bootstrap",
     "precommit": "lint-staged",
     "pretest": "npm run lint",
