--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -21,10 +21,10 @@
     "markdown-to-react"
   ],
   "dependencies": {
+    "babel-code-frame": "^6.22.0",
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-code-frame": "^6.22.0",
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
     "front-matter": "^2.1.2",
@@ -32,7 +32,9 @@
     "line-column": "^1.0.2",
     "lodash": "^4.17.4",
     "pascal-case": "^2.0.1",
+    "react-element-to-jsx-string": "^12.0.0",
     "rehype-raw": "^2.0.0",
+    "rehype-react": "^3.0.0",
     "rehype-stringify": "^3.0.0",
     "remark-parse": "^4.0.0",
     "remark-rehype": "^2.0.1",
