--- a/package.json
+++ b/package.json
@@ -4,33 +4,31 @@
   "license": "MIT",
   "scripts": {
     "start-repl": "webpack-dev-server --config repl/webpack.config.js --content-base repl",
+    "build-repl": "PRODUCTION=true webpack --config repl/webpack.config.js",
     "lint": "eslint .",
     "test-jest": "jest",
     "format": "prettier --single-quote --write '**/!(node_modules|dist)/**/*.js'",
     "postinstall": "lerna bootstrap",
     "precommit": "lint-staged",
     "pretest": "npm run lint",
-    "test": "jest"
+    "test": "jest",
+    "build": "npm run build-repl"
   },
   "devDependencies": {
+    "@mapbox/assembly": "^0.16.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
     "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
     "lerna": "^2.0.0",
     "lint-staged": "^4.0.2",
     "prettier": "^1.5.3",
-    "react": "^15.6.1",
-    "react-codemirror": "^1.0.0",
-    "react-dom": "^15.6.1",
-    "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "webpack-parallel-uglify-plugin": "^1.0.0"
   },
   "engines": {
     "node": ">=4"
