--- a/package.json
+++ b/package.json
@@ -3,22 +3,32 @@
   "name": "jsxtreme-markdown",
   "license": "MIT",
   "scripts": {
+    "start-repl": "webpack-dev-server --config repl/webpack.config.js --content-base repl",
+    "build-repl": "PRODUCTION=true webpack --config repl/webpack.config.js",
     "lint": "eslint .",
     "test-jest": "jest",
     "format": "prettier --single-quote --write '**/!(node_modules|dist)/**/*.js'",
     "postinstall": "lerna bootstrap",
     "precommit": "lint-staged",
     "pretest": "npm run lint",
-    "test": "jest"
+    "test": "jest",
+    "build": "npm run build-repl"
   },
   "devDependencies": {
+    "@mapbox/assembly": "^0.16.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.3.0",
     "eslint-plugin-node": "^5.1.1",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
     "lerna": "^2.0.0",
     "lint-staged": "^4.0.2",
-    "prettier": "^1.5.3"
+    "prettier": "^1.5.3",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1",
+    "webpack-parallel-uglify-plugin": "^1.0.0"
   },
   "engines": {
     "node": ">=4"
