--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "precommit": "lint-staged",
     "pretest": "npm run lint",
     "test": "jest",
-    "build": "npm run build-repl"
+    "build-repl-pages": "npm run build-repl && cp -R repl repl-pages"
   },
   "devDependencies": {
     "@mapbox/assembly": "^0.16.0",
