--- a/packages/babel-plugin-transform-jsxtreme-markdown/package.json
+++ b/packages/babel-plugin-transform-jsxtreme-markdown/package.json
@@ -23,11 +23,11 @@
   ],
   "dependencies": {
     "@mapbox/jsxtreme-markdown": "^0.7.3",
-    "babylon": "^6.17.4"
+    "babylon": "^6.18.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
   },
   "engines": {
     "node": ">=4"
