--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -21,32 +21,32 @@
     "markdown-to-react"
   ],
   "dependencies": {
-    "babel-code-frame": "^6.22.0",
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-code-frame": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
-    "front-matter": "^2.1.2",
-    "htmltojsx": "^0.2.6",
+    "front-matter": "^2.3.0",
+    "htmltojsx": "^0.3.0",
     "line-column": "^1.0.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "pascal-case": "^2.0.1",
-    "prettier": "^1.5.3",
+    "prettier": "^1.11.1",
     "rehype-raw": "^2.0.0",
     "rehype-stringify": "^3.0.0",
-    "remark-parse": "^4.0.0",
-    "remark-rehype": "^2.0.1",
-    "stringify-object": "^3.2.0",
-    "unified": "^6.1.5"
+    "remark-parse": "^5.0.0",
+    "remark-rehype": "^3.0.0",
+    "stringify-object": "^3.2.2",
+    "unified": "^6.1.6"
   },
   "devDependencies": {
     "del": "^3.0.0",
-    "js-beautify": "^1.6.14",
+    "js-beautify": "^1.7.5",
     "mkdirp": "^0.5.1",
     "pify": "^3.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "strip-indent": "^2.0.0"
   },
   "engines": {
