--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -28,9 +28,11 @@
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
     "front-matter": "^2.3.0",
+    "github-slugger": "^1.2.0",
     "htmltojsx": "^0.2.6",
     "line-column": "^1.0.2",
     "lodash": "^4.17.5",
+    "mdast-util-to-string": "^1.0.4",
     "pascal-case": "^2.0.1",
     "prettier": "^1.11.1",
     "rehype-raw": "^2.0.0",
@@ -38,7 +40,8 @@
     "remark-parse": "^5.0.0",
     "remark-rehype": "^3.0.0",
     "stringify-object": "^3.2.2",
-    "unified": "^6.1.6"
+    "unified": "^6.1.6",
+    "unist-util-visit": "^1.3.0"
   },
   "devDependencies": {
     "del": "^3.0.0",
