--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "testMatch": [
       "**/*.test.js"
     ],
-    "clearMocks": true
+    "clearMocks": true,
+    "testEnvironment": "node"
   },
   "prettier": {
     "singleQuote": true
@@ -60,5 +61,9 @@
       "env",
       "react"
     ]
+  },
+  "dependencies": {
+    "hast-to-hyperscript": "^4.0.0",
+    "unist-util-visit": "^1.3.0"
   }
 }
