Transform align property on table cells to inline text-align style
Closes #23.

--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -21,6 +21,7 @@
     "markdown-to-react"
   ],
   "dependencies": {
+    "@mapbox/hast-util-table-cell-style": "^0.1.2",
     "babel-code-frame": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
