Create hast-util-to-jsx package, use it to replace htmltojsx (#43)

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "testMatch": [
       "**/*.test.js"
     ],
-    "clearMocks": true
+    "clearMocks": true,
+    "testEnvironment": "node"
   },
   "prettier": {
     "singleQuote": true
