--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "@mapbox/hast-util-table-cell-style": "^0.1.2",
+    "@mapbox/hast-util-to-jsx": "^0.1.0",
     "babel-code-frame": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -30,14 +31,12 @@
     "block-elements": "^1.2.0",
     "front-matter": "^2.3.0",
     "github-slugger": "^1.2.0",
-    "htmltojsx": "^0.2.6",
     "line-column": "^1.0.2",
     "lodash": "^4.17.5",
     "mdast-util-to-string": "^1.0.4",
     "pascal-case": "^2.0.1",
     "prettier": "^1.11.1",
     "rehype-raw": "^2.0.0",
-    "rehype-stringify": "^3.0.0",
     "remark-parse": "^5.0.0",
     "remark-rehype": "^3.0.0",
     "stringify-object": "^3.2.2",
@@ -49,7 +48,7 @@
     "js-beautify": "^1.7.5",
     "mkdirp": "^0.5.1",
     "pify": "^3.0.0",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-dom": "^16.2.0",
     "strip-indent": "^2.0.0"
   },
