--- a/packages/hast-util-to-jsx/package.json
+++ b/packages/hast-util-to-jsx/package.json
@@ -28,7 +28,8 @@
     "postcss-js": "^1.0.1",
     "property-information": "^3.2.0",
     "react-attr-converter": "^0.3.1",
-    "stringify-entities": "^1.3.1"
+    "stringify-entities": "^1.3.1",
+    "stringify-object": "^3.2.2"
   },
   "devDependencies": {
     "hastscript": "^3.1.0",
