--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   },
   "plugins": ["node"],
   "rules": {
-    "node/no-unsupported-features": ["error", {"version": 4}],
+    "node/no-unsupported-features": ["error"],
     "node/no-missing-require": ["error"]
   }
 }
