--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -21,37 +21,37 @@
     "markdown-to-react"
   ],
   "dependencies": {
-    "@mapbox/hast-util-table-cell-style": "^0.1.2",
+    "@babel/code-frame": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@mapbox/hast-util-table-cell-style": "^0.1.3",
     "@mapbox/hast-util-to-jsx": "^0.1.0",
-    "babel-code-frame": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
-    "front-matter": "^2.3.0",
-    "github-slugger": "^1.2.0",
+    "front-matter": "^4.0.2",
+    "github-slugger": "^1.3.0",
     "line-column": "^1.0.2",
-    "lodash": "^4.17.5",
-    "mdast-util-to-string": "^1.0.4",
-    "pascal-case": "^2.0.1",
-    "rehype-raw": "^2.0.0",
-    "remark-parse": "^5.0.0",
-    "remark-rehype": "^3.0.0",
-    "stringify-object": "^3.2.2",
-    "strip-indent": "^2.0.0",
-    "unified": "^6.1.6",
-    "unist-util-visit": "^1.3.0"
+    "lodash": "^4.17.15",
+    "mdast-util-to-string": "^1.1.0",
+    "pascal-case": "^3.1.1",
+    "rehype-raw": "^4.0.2",
+    "remark-parse": "^8.0.2",
+    "remark-rehype": "^7.0.0",
+    "stringify-object": "^3.3.0",
+    "strip-indent": "^3.0.0",
+    "unified": "^9.0.0",
+    "unist-util-visit": "^2.0.2"
   },
   "devDependencies": {
-    "del": "^3.0.0",
-    "js-beautify": "^1.7.5",
-    "mkdirp": "^0.5.1",
-    "pify": "^3.0.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.2.0"
+    "del": "^5.1.0",
+    "js-beautify": "^1.11.0",
+    "mkdirp": "^1.0.4",
+    "pify": "^5.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=10"
   }
 }
