--- a/package.json
+++ b/package.json
@@ -33,11 +33,6 @@
   "prettier": {
     "singleQuote": true
   },
-  "huksy": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
     "@babel/code-frame": "^7.16.0",
     "@babel/core": "^7.16.0",
@@ -79,14 +74,14 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@mapbox/assembly": "^1.3.0",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^7.1.5",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
     "eslint": "^7.32.0",
     "eslint-plugin-node": "^11.1.0",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
-    "prettier": "2.0.5",
+    "prettier": "^2.4.1",
     "pretty-quick": "^3.1.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
