--- a/package.json
+++ b/package.json
@@ -1,101 +1,91 @@
 {
-	"private": true,
-	"name": "jsxtreme-markdown",
-	"license": "MIT",
-	"scripts": {
-		"start-repl": "webpack-dev-server --config repl/webpack.config.js --content-base repl",
-		"build-repl": "PRODUCTION=true webpack --config repl/webpack.config.js",
-		"lint": "eslint .",
-		"test-jest": "jest",
-		"format": "prettier --write '**/*.js'",
-		"postinstall": "lerna bootstrap",
-		"pretest": "npm run lint",
-		"test": "jest"
-	},
-	"engines": {
-		"node": ">=10"
-	},
-	"jest": {
-		"coverageReporters": [
-			"text",
-			"html"
-		],
-		"roots": [
-			"<rootDir>/packages"
-		],
-		"testMatch": [
-			"**/*.test.js"
-		],
-		"clearMocks": true,
-		"testEnvironment": "node"
-	},
-	"prettier": {
-		"singleQuote": true
-	},
-	"lint-staged": {
-		"*.js": [
-			"eslint",
-			"prettier --write"
-		]
-	},
-	"huksy": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"dependencies": {
-		"@babel/code-frame": "^7.10.1",
-		"@babel/core": "^7.10.2",
-		"@babel/parser": "^7.10.2",
-		"@mapbox/hast-util-table-cell-style": "^0.1.3",
-		"balanced-match": "^1.0.0",
-		"block-elements": "^1.2.0",
-		"del": "^5.1.0",
-		"front-matter": "^4.0.2",
-		"github-slugger": "^1.3.0",
-		"hastscript": "^5.1.2",
-		"js-beautify": "^1.11.0",
-		"kebab-case": "^1.0.0",
-		"line-column": "^1.0.2",
-		"loader-utils": "^2.0.0",
-		"lodash": "^4.17.15",
-		"mdast-util-to-string": "^1.1.0",
-		"mkdirp": "^1.0.4",
-		"pascal-case": "^3.1.1",
-		"pify": "^5.0.0",
-		"postcss": "^7.0.31",
-		"postcss-js": "^2.0.3",
-		"property-information": "^5.5.0",
-		"react": "^16.13.1",
-		"react-attr-converter": "^0.3.1",
-		"react-dom": "^16.13.1",
-		"rehype-parse": "^6.0.2",
-		"rehype-raw": "^4.0.2",
-		"remark-parse": "^8.0.2",
-		"remark-rehype": "^7.0.0",
-		"stringify-entities": "^3.0.1",
-		"stringify-object": "^3.3.0",
-		"strip-indent": "^3.0.0",
-		"unified": "^9.0.0",
-		"unist-builder": "^2.0.3",
-		"unist-util-visit": "^2.0.2"
-	},
-	"devDependencies": {
-		"@babel/preset-env": "^7.10.2",
-		"@babel/preset-react": "^7.10.1",
-		"@mapbox/assembly": "^0.24.0",
-		"babel-jest": "^26.0.1",
-		"babel-loader": "^8.1.0",
-		"eslint": "^7.1.0",
-		"eslint-plugin-node": "^11.1.0",
-		"husky": "^4.2.5",
-		"jest": "^26.0.1",
-		"lerna": "^3.22.0",
-		"lint-staged": "^10.2.7",
-		"prettier": "2.0.5",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-parallel-uglify-plugin": "^1.1.2"
-	}
+  "private": true,
+  "name": "jsxtreme-markdown",
+  "license": "MIT",
+  "scripts": {
+    "start-repl": "webpack-dev-server --config repl/webpack.config.js --content-base repl",
+    "build-repl": "PRODUCTION=true webpack --config repl/webpack.config.js",
+    "lint": "eslint .",
+    "test-jest": "jest",
+    "postinstall": "lerna bootstrap",
+    "pretest": "npm run lint",
+    "test": "jest",
+    "prepare": "husky install",
+    "pretty-quick": "pretty-quick"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
+    "roots": [
+      "<rootDir>/packages"
+    ],
+    "testMatch": [
+      "**/*.test.js"
+    ],
+    "clearMocks": true,
+    "testEnvironment": "node"
+  },
+  "prettier": {
+    "singleQuote": true
+  },
+  "dependencies": {
+    "@babel/code-frame": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/parser": "^7.16.4",
+    "@mapbox/hast-util-table-cell-style": "^0.1.3",
+    "balanced-match": "^1.0.2",
+    "block-elements": "^1.2.0",
+    "del": "^5.1.0",
+    "front-matter": "^4.0.2",
+    "github-slugger": "^1.4.0",
+    "hastscript": "^5.1.2",
+    "js-beautify": "^1.14.0",
+    "kebab-case": "^1.0.1",
+    "line-column": "^1.0.2",
+    "loader-utils": "^2.0.2",
+    "lodash": "^4.17.21",
+    "mdast-util-to-string": "^1.1.0",
+    "mkdirp": "^1.0.4",
+    "pascal-case": "^3.1.2",
+    "pify": "^5.0.0",
+    "postcss": "^7.0.39",
+    "postcss-js": "^2.0.3",
+    "property-information": "^5.6.0",
+    "react": "^16.14.0",
+    "react-attr-converter": "^0.3.1",
+    "react-dom": "^16.14.0",
+    "rehype-parse": "^6.0.2",
+    "rehype-raw": "^4.0.2",
+    "remark-parse": "^8.0.3",
+    "remark-rehype": "^7.0.0",
+    "stringify-entities": "^3.1.0",
+    "stringify-object": "^3.3.0",
+    "strip-indent": "^3.0.0",
+    "unified": "^9.2.2",
+    "unist-builder": "^2.0.3",
+    "unist-util-visit": "^2.0.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@mapbox/assembly": "^1.3.0",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "husky": "^7.0.0",
+    "jest": "^26.6.3",
+    "lerna": "^3.22.1",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-parallel-uglify-plugin": "^1.1.4"
+  }
 }
