Revert "Update lerna.json"
This reverts commit 33146cd73ad5a25d553756ba055f439d74cf8f76.

--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,12 @@
       "hoist": true
     },
     "publish": {
-      "ignoreChanges": ["**/test/**", "**/*.test.js", "**/examples/**"]
+      "ignoreChanges": [
+        "**/test/**",
+        "**/*.test.js",
+        "**/examples/**",
+        "**/*.md"
+      ]
     }
   }
 }
