vendor remark-parse, replace trim with string.prototype.trim

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pretty-quick": "pretty-quick"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18",
+    "npm": ">=9"
   },
   "jest": {
     "coverageReporters": [
@@ -59,9 +60,8 @@
     "react": "^16.14.0",
     "react-attr-converter": "^0.3.1",
     "react-dom": "^16.14.0",
-    "rehype-parse": "^6.0.2",
+    "remark-parse": "file:./vendor/remark-parse",
     "rehype-raw": "^4.0.2",
-    "remark-parse": "^8.0.3",
     "remark-rehype": "^7.0.0",
     "stringify-entities": "^3.1.0",
     "stringify-object": "^3.3.0",
