--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -36,7 +36,7 @@
     "mdast-util-to-string": "^1.1.0",
     "pascal-case": "^3.1.1",
     "rehype-raw": "^4.0.2",
-    "remark-parse": "^8.0.2",
+    "remark-parse": "file:../../vendor/remark-parse",
     "remark-rehype": "^7.0.0",
     "stringify-object": "^3.3.0",
     "strip-indent": "^3.0.0",
@@ -52,6 +52,7 @@
     "react-dom": "^16.13.1"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18",
+    "npm": ">=9"
   }
 }
