move remark-parse to jsxtreme-markdown package

--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -31,17 +31,25 @@
     "block-elements": "^1.2.0",
     "front-matter": "^4.0.2",
     "github-slugger": "^1.4.0",
+    "is-whitespace-character": "^1.0.0",
+    "is-word-character": "^1.0.0",
     "line-column": "^1.0.2",
     "lodash": "^4.17.15",
+    "markdown-escapes": "^1.0.0",
     "mdast-util-to-string": "^1.1.0",
+    "parse-entities": "^2.0.0",
     "pascal-case": "^3.1.1",
     "rehype-raw": "^4.0.2",
-    "remark-parse": "file:../../vendor/remark-parse",
     "remark-rehype": "^7.0.0",
+    "state-toggle": "^1.0.0",
     "stringify-object": "^3.3.0",
     "strip-indent": "^3.0.0",
+    "trim-trailing-lines": "^1.0.0",
+    "unherit": "^1.0.4",
     "unified": "^9.2.2",
-    "unist-util-visit": "^2.0.2"
+    "unist-util-remove-position": "^2.0.0",
+    "unist-util-visit": "^2.0.2",
+    "vfile-location": "^3.0.0"
   },
   "devDependencies": {
     "del": "^5.1.0",
