--- a/packages/jsxtreme-markdown/package.json
+++ b/packages/jsxtreme-markdown/package.json
@@ -29,8 +29,12 @@
     "@mapbox/hast-util-to-jsx": "^2.0.0",
     "balanced-match": "^1.0.0",
     "block-elements": "^1.2.0",
+    "ccount": "^1.0.0",
+    "collapse-white-space": "^1.0.2",
     "front-matter": "^4.0.2",
     "github-slugger": "^1.4.0",
+    "is-alphabetical": "^1.0.0",
+    "is-decimal": "^1.0.0",
     "is-whitespace-character": "^1.0.0",
     "is-word-character": "^1.0.0",
     "line-column": "^1.0.2",
@@ -41,7 +45,9 @@
     "pascal-case": "^3.1.1",
     "rehype-raw": "^4.0.2",
     "remark-rehype": "^7.0.0",
+    "repeat-string": "^1.5.4",
     "state-toggle": "^1.0.0",
+    "string.prototype.trim": "^1.2.7",
     "stringify-object": "^3.3.0",
     "strip-indent": "^3.0.0",
     "trim-trailing-lines": "^1.0.0",
@@ -49,7 +55,8 @@
     "unified": "^9.2.2",
     "unist-util-remove-position": "^2.0.0",
     "unist-util-visit": "^2.0.2",
-    "vfile-location": "^3.0.0"
+    "vfile-location": "^3.0.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "del": "^5.1.0",
