--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "start-repl": "NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --config repl/webpack.config.js",
-    "build-repl": "webpack --config repl/webpack.prod.js",
+    "build-repl": "PRODUCTION=true webpack --config repl/webpack.config.js",
     "lint": "eslint .",
     "test-jest": "jest",
     "pretest": "npm run lint",
@@ -91,6 +91,6 @@
     "webpack-cli": "^5",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0",
-    "webpack-parallel-uglify-plugin": "^1.1.4"
+    "webpack-parallel-uglify-plugin": "^2.0.0"
   }
 }
