--- a/packages/jsxtreme-markdown-loader/package.json
+++ b/packages/jsxtreme-markdown-loader/package.json
@@ -23,5 +23,6 @@
     "@mapbox/jsxtreme-markdown": "^3.0.2",
     "loader-utils": "^2.0.0",
     "lodash.clonedeep": "^4.5.0"
-  }
+  },
+  "gitHead": "13ee9214bb864c45f3180d04448fcb5033abaf7c"
 }
