update dependencies, remove lerna, fix tests

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "name": "jsxtreme-markdown",
   "license": "MIT",
   "scripts": {
-    "start-repl": "webpack-dev-server --config repl/webpack.config.js --content-base repl",
+    "start-repl": "NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --config repl/webpack.config.js",
     "build-repl": "PRODUCTION=true webpack --config repl/webpack.config.js",
     "lint": "eslint .",
     "test-jest": "jest",
-    "postinstall": "lerna bootstrap",
     "pretest": "npm run lint",
     "test": "jest",
     "prepare": "husky install",
-    "pretty-quick": "pretty-quick"
+    "pretty-quick": "pretty-quick",
+    "postinstall": "for d in ./packages/* ; do (cd \"$d\" && npm ci); done"
   },
   "engines": {
     "node": ">=18",
@@ -34,57 +34,25 @@
   "prettier": {
     "singleQuote": true
   },
-  "dependencies": {
-    "@babel/code-frame": "^7.16.0",
-    "@babel/core": "^7.23.0",
-    "@babel/parser": "^7.16.4",
-    "@mapbox/hast-util-table-cell-style": "^0.2.1",
-    "balanced-match": "^1.0.2",
-    "block-elements": "^1.2.0",
-    "del": "^5.1.0",
-    "front-matter": "^4.0.2",
-    "github-slugger": "^1.4.0",
-    "hastscript": "^5.1.2",
-    "js-beautify": "^1.14.0",
-    "kebab-case": "^1.0.1",
-    "line-column": "^1.0.2",
-    "loader-utils": "^2.0.2",
-    "lodash": "^4.17.21",
-    "mdast-util-to-string": "^1.1.0",
-    "mkdirp": "^1.0.4",
-    "pascal-case": "^3.1.2",
-    "pify": "^5.0.0",
-    "postcss": "^7.0.39",
-    "postcss-js": "^2.0.3",
-    "property-information": "^5.6.0",
-    "react": "^16.14.0",
-    "react-attr-converter": "^0.3.1",
-    "react-dom": "^16.14.0",
-    "rehype-raw": "^4.0.2",
-    "remark-rehype": "^7.0.0",
-    "stringify-entities": "^3.1.0",
-    "stringify-object": "^3.3.0",
-    "strip-indent": "^3.0.0",
-    "unified": "^9.2.2",
-    "unist-builder": "^2.0.3",
-    "unist-util-visit": "^2.0.3"
-  },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.0",
     "@mapbox/assembly": "^1.5.1",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8",
     "eslint-plugin-node": "^11.1.0",
     "husky": "^7.0.0",
     "jest": "^26.6.3",
-    "lerna": "^3.22.1",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3",
-    "webpack-parallel-uglify-plugin": "^1.1.4"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "^5",
+    "webpack-cli": "^5",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0",
+    "webpack-parallel-uglify-plugin": "^2.0.0"
   }
 }
